src/objects/BLP_Course_To_Curriculum__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Component_Type_Id__c</fullName>
        <description>CPNT_TYP_ID for SuccessFactors Integration</description>
        <label>Component Type Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course__c</fullName>
        <description>QUAL_ID from SuccesFactors Integration</description>
        <label>Course</label>
        <referenceTo>BLP_Course__c</referenceTo>
        <relationshipLabel>Course To Curriculum</relationshipLabel>
        <relationshipName>Course_To_Curriculum</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BLP_Curriculum__c</fullName>
        <description>CPNT_ID From SuccessFactors Integration</description>
        <label>Curriculum</label>
        <referenceTo>BLP_Curriculum__c</referenceTo>
        <relationshipLabel>Course To Curriculum</relationshipLabel>
        <relationshipName>Course_To_Curriculum</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BLP_Revision_Date__c</fullName>
        <description>REV_DTE for the SuccessFactors Integration</description>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Revision_Number__c</fullName>
        <description>REV_NUM for the SuccessFactors Integration</description>
        <label>Revision Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_SuccessFactors_Id__c</fullName>
        <description>Combination of QUAL_ID and CPNT_ID from SuccessFactors Integration</description>
        <externalId>true</externalId>
        <label>SuccessFactors Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Course To Curriculum</label>
    <nameField>
        <label>Course To Curriculum  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course To Curriculum</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>